# COLAPorator

./: .gitignore  BOM_Thesis.xlsx  Refactor Plan.txt  doc.txt  script.js  style.css  webapp.html
src/: ExplorerApp.py  colaps.kv  colaps.kv.txt  config_new.py  config_tool.py  content_manager.py  database_manager.py  frontend.py  guestbook_browser.py  json_importer.py  pyproject.toml  startApp.sh  startCM.sh  startSetup.sh  test.db
src/backend/: database_manager.py  tlv493d.py
src/categories/: Category.py  CategoryService.py  service.py
src/data/: Category.py  Guest.py  Topic.py
src/database/: database_manager.py  test.db
src/guests/: Guest.py  GuestService.py
src/hardware/: JoystickManager.py  tlv493d.py
src/screens/: GuestBookScreen.py  StartupScreen.py  TopicDetailScreen.py  TopicListScreen.py  WaitingScreen.py  finish_screen.py
src/services/: CategoryService.py  GuestService.py  TopicService.py
src/tools/: config_new.py  config_tool.py  data_categorized.json  json_importer.py
src/topics/: Topic.py  TopicService.py  service.py
src/ui/: HoverableButton.py  LabeledCheckbox.py  RotatedLabel.py  SearchBar.py  SelectableButton.py  TopicListButton.py
thesis/: Conclusion.aux  Introduction.aux  Introduction.tex  Methodology.aux  Methodology.tex  Related_Work.aux  Related_Work.tex  Results.aux  conclusion.tex  main.aux  main.bbl  main.bcf  main.blg  main.out  main.tex  main.tex.blg  main.toc  references.bib  results.tex  title.aux  title.tex
webapp_mockup/: script.js  style.css  webapp.html
