[project]
name = "bachelor-thesis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-tlv493d (>=2.0.9,<3.0.0)",
    "kivy[full] (>=2.3.1,<3.0.0)",
    "lgpio (>=0.2.2.0,<0.3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
